--- a/web/refresh.html
+++ b/web/refresh.html
@@ -97,9 +97,13 @@
         filters: {
             formatDate(val){
                 const date = new Date(val)
-                return date.getFullYear() + '-' + (date.getMonth()+1) + '-' +
-                        date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes() +
-                        ':' + date.getSeconds()
+                const y = date.getFullYear()
+                const m = date.getMonth() + 1
+                const d = date.getDate()
+                const hh = date.getHours()
+                const mm = date.getMinutes()
+                const ss = date.getSeconds()
+                return `${y}-${m}-${d} ${hh}:${mm}:${ss}`
             }
         },
         methods: {
@@ -146,7 +150,7 @@
                 })
             },
             receiveMsg(data) {
-                this.chatData = this.chatData.concat(data)
+                this.chatData.push(...data)
             }
         }
     })
