--- a/web/ws.html
+++ b/web/ws.html
@@ -61,7 +61,7 @@
 <script>
     const name = Cookies.get('username') ? Cookies.get('username') : (window.location.href = '/')
     function initSocket(username) {
-        let url = 'ws://' + window.location.host + '/ws/socket?name=' + username
+        let url = `ws://${window.location.host}/ws/socket?name=${username}`
         const socket = new WebSocket(url)
         return socket
     }
@@ -97,9 +97,13 @@
         filters: {
             formatDate(val){
                 const date = new Date(val)
-                return date.getFullYear() + '-' + (date.getMonth()+1) + '-' +
-                        date.getDate() + ' ' + date.getHours() + ':' + date.getMinutes() +
-                        ':' + date.getSeconds()
+                const y = date.getFullYear()
+                const m = date.getMonth() + 1
+                const d = date.getDate()
+                const hh = date.getHours()
+                const mm = date.getMinutes()
+                const ss = date.getSeconds()
+                return `${y}-${m}-${d} ${hh}:${mm}:${ss}`
             }
         },
         methods: {
