--- a/web/index.html
+++ b/web/index.html
@@ -50,7 +50,7 @@
         el: '#app',
         data() {
             return {
-                name: 'monigo',
+                name: 'vouv',
                 target: 'WebSocket'
             }
         },
