--- a/web/ws.html
+++ b/web/ws.html
@@ -1,196 +1,233 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Chat Demo</title>
 
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    />
     <script src="/static/js/vue.js"></script>
     <script src="/static/js/element.js"></script>
     <script src="/static/js/js.cookie.js"></script>
-</head>
-<body>
-<div id="app">
-    <el-container class="container">
+  </head>
+  <body>
+    <div id="app">
+      <el-container class="container">
         <el-header>
-            <el-row :gutter="20">
-                <el-col :span="4" style="text-align: left">
-                    <i class="el-icon-caret-left" @click="onExit"></i>
-                </el-col>
-                <el-col :span="16">
-                    {{ name }}
-                </el-col>
-            </el-row>
+          <el-row :gutter="20">
+            <el-col :span="4" style="text-align: left">
+              <i class="el-icon-caret-left" @click="onExit"></i>
+            </el-col>
+            <el-col :span="16">
+              {{ name }}
+            </el-col>
+          </el-row>
         </el-header>
         <el-container>
-            <el-aside width="200px">
-                <p>Mode: WebSocket</p>
-                <p>房间人数: {{ count }}</p>
-            </el-aside>
-            <el-container ref="container">
-                <el-main ref="area">
-                    <el-table
-                            :data="chatData"
-                            :show-header=false
-                            ref="table">
-                        <el-table-column>
-                            <template slot-scope="scope">
-                                <span style="font-size: 20px;">@{{ scope.row.user }}</span>
-                                <i class="el-icon-time" style="margin-left: 10px"></i>
-                                <span>{{ scope.row.timestamp| formatDate }}</span>
-                                <p style="margin-left: 2px;">{{ scope.row.text }}</p>
-                            </template>
-                        </el-table-column>
-                    </el-table>
-                </el-main>
-                <el-footer>
-                    <el-row>
-                        <el-col :span="20">
-                            <el-input placeholder="Type here..." v-model="msg" ref="input" @keyup.enter.native="sendMessage" ></el-input>
-                        </el-col>
-                        <el-col :span="4">
-                            <el-button type="primary" @click="sendMessage">发送</el-button>
-                            <el-button type="info" @click="clearInput">清空</el-button>
-                        </el-col>
-                    </el-row>
-                </el-footer>
-            </el-container>
+          <el-aside width="200px">
+            <p>Mode: WebSocket</p>
+            <p>房间人数: {{ userCount }}</p>
+          </el-aside>
+          <el-container ref="container">
+            <el-main ref="area" style="margin-bottom: 160px;">
+              <el-table
+                :data="chatData"
+                :show-header="false"
+                :height="tableHeight"
+                ref="table"
+              >
+                <el-table-column>
+                  <template slot-scope="scope">
+                    <span style="font-size: 20px;">@{{ scope.row.user }}</span>
+                    <i class="el-icon-time" style="margin-left: 10px"></i>
+                    <span>{{ scope.row.timestamp| formatDate }}</span>
+                    <p style="margin-left: 2px;">{{ scope.row.text }}</p>
+                  </template>
+                </el-table-column>
+              </el-table>
+            </el-main>
+            <el-footer
+              style="width: 100%; height:60px; position: absolute; bottom: 0; text-align: left;"
+            >
+              <div style="width: 78%; display: inline-block;">
+                <el-input
+                  placeholder="Type here..."
+                  v-model="msg"
+                  ref="input"
+                  @keyup.enter.native="sendMessage"
+                ></el-input>
+              </div>
+              <div
+                style="width: 20%; display: inline-block; margin-right: 20px;"
+              >
+                <el-button type="primary" @click="sendMessage">发送</el-button>
+                <el-button type="info" @click="clearInput">清空</el-button>
+              </div>
+            </el-footer>
+          </el-container>
         </el-container>
-    </el-container>
-</div>
-<script>
-    const name = Cookies.get('username') ? Cookies.get('username') : (window.location.href = '/')
-    function initSocket(username) {
-        let url = `ws://${window.location.host}/ws/socket?name=${username}`
-        const socket = new WebSocket(url)
-        return socket
-    }
-    const app = new Vue({
-        el: '#app',
-        data () {
-            return {
-                socket: null,
-                name: name,
-                count: 20,
-                msg: '',
-                chatData: []
-            }
+      </el-container>
+    </div>
+    <script>
+      const name = Cookies.get("username")
+        ? Cookies.get("username")
+        : (window.location.href = "/");
+      const EventTypeMsg = "event-msg",
+        EventTypeSystem = "event-system",
+        EventTypeJoin = "event-join",
+        EventTypeTyping = "event-typing",
+        EventTypeLeave = "event-leave",
+        EventTypeImage = "event-image";
+
+      function initSocket(username) {
+        let url = `ws://${window.location.host}/ws/socket?name=${username}`;
+        const socket = new WebSocket(url);
+        return socket;
+      }
+      const app = new Vue({
+        el: "#app",
+        data() {
+          return {
+            socket: null,
+            tableHeight: window.innerHeight - 120,
+            name: name,
+            userCount: 0,
+            msg: "",
+            chatData: []
+          };
         },
-        mounted(){
-            const socket = initSocket(name)
-            this.setUpSocket(socket)
-            this.socket = socket
+        mounted() {
+          const socket = initSocket(name);
+          this.setUpSocket(socket);
+          this.socket = socket;
+          window.addEventListener("resize", _ => this.tableHeight = window.innerHeight - 120);
         },
         watch: {
-            socket(val) {
-                if(!val){
-                    this.socket = initSocket(Cookies.get('username'))
-                    this.setUpSocket(this.socket)
-                }
-            },
-            chatData() {
-                // 滚动到最底部
-                const div = this.$refs.area.$el
-                div.scrollTop = div.scrollHeight
+          socket(val) {
+            if (!val) {
+              this.socket = initSocket(Cookies.get("username"));
+              this.setUpSocket(this.socket);
             }
+          },
+          chatData() {
+            // 滚动到最底部
+            this.$nextTick(() => {
+              const div = this.$refs.table.bodyWrapper;
+              div.scrollTop = div.scrollHeight;
+            });
+          }
         },
         filters: {
-            formatDate(val){
-                const date = new Date(val)
-                const y = date.getFullYear()
-                const m = date.getMonth() + 1
-                const d = date.getDate()
-                const hh = date.getHours()
-                const mm = date.getMinutes()
-                const ss = date.getSeconds()
-                return `${y}-${m}-${d} ${hh}:${mm}:${ss}`
-            }
+          formatDate(val) {
+            const date = new Date(val);
+            const y = date.getFullYear();
+            const m = date.getMonth() + 1;
+            const d = date.getDate();
+            const hh = date.getHours();
+            const mm = date.getMinutes();
+            const ss = date.getSeconds();
+            return `${m}-${d} ${hh}:${mm}:${ss}`;
+          }
         },
         methods: {
-            setUpSocket(socket) {
-                socket.onopen = () => {
-                    this.$message({
-                        type: 'success',
-                        message: '聊天室连接成功'
-                    })
-                };
-                socket.onclose = () => {
-                    this.$message({
-                        type: 'warning',
-                        message: '连接断开'
-                    })
-                    this.socket = null
-                }
-                socket.onmessage = event => {
-                    console.log(event.data)
-                    this.receiveMsg(JSON.parse(event.data))
-                }
-            },
-            onExit(){
-                window.location.href = '/'
-            },
-            clearInput(){
-                this.msg = ''
-                this.$refs.input.focus()
-            },
-            sendMessage() {
-                if(!this.msg) {
-                    this.$message({
-                        type: 'warning',
-                        message: '不能发送空消息'
-                    })
-                    this.$refs.input.focus()
-                    return
-                }
-                const req = JSON.stringify({
-                    msg: this.msg
-                })
-                this.socket && (this.socket.send(req), this.msg = '', this.$refs.input.focus())
-            },
-            receiveMsg(data) {
-                this.chatData.push(data)
+          setUpSocket(socket) {
+            socket.onopen = () => {
+              this.$message({
+                type: "success",
+                message: "聊天室连接成功"
+              });
+            };
+            socket.onclose = () => {
+              this.$message({
+                type: "warning",
+                message: "连接断开"
+              });
+              this.socket = null;
+            };
+            socket.onmessage = event => {
+              let dt = JSON.parse(event.data);
+              switch (dt.type) {
+                case EventTypeMsg:
+                  this.receiveMsg(dt);
+                  this.userCount = dt.userCount;
+                  console.log(this.userCount);
+                  break;
+                case EventTypeSystem:
+                  this.userCount = dt.userCount;
+                  break;
+              }
+            };
+          },
+          onExit() {
+            window.location.href = "/";
+          },
+          clearInput() {
+            this.msg = "";
+            this.$refs.input.focus();
+          },
+          sendMessage() {
+            if (!this.msg) {
+              this.$refs.input.focus();
+              return;
             }
+            const req = JSON.stringify({
+              msg: this.msg
+            });
+            this.socket && (this.socket.send(req), (this.msg = ""), this.$refs.input.focus());
+          },
+          receiveMsg(data) {
+            this.chatData.push(data);
+          }
         }
-    })
-
-</script>
-</body>
-<style>
-    html, body { height: 100%; width: 100%; margin: 0; padding: 0; overflow: hidden; }
+      });
+    </script>
+  </body>
+  <style>
+    html,
+    body {
+      height: 100%;
+      width: 100%;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+    }
     .container {
-        height: 100vh;
-        width: 100vw;
+      height: 100vh;
+      width: 100vw;
     }
     .el-header {
-        background-color: #283443;
-        font-size: 30px;
-        color: #eee;
-        text-align: center;
-        line-height: 60px;
+      background-color: #283443;
+      font-size: 30px;
+      color: #eee;
+      text-align: center;
+      line-height: 60px;
     }
     .el-footer {
-        background-color: #283443;
-        color: #eee;
-        text-align: center;
-        line-height: 60px;
+      background-color: #283443;
+      color: #eee;
+      text-align: center;
+      line-height: 60px;
     }
     .el-aside {
-        background-color: #D3DCE6;
-        color: #333;
-        text-align: center;
-        height: 100%;
+      background-color: #d3dce6;
+      color: #333;
+      text-align: center;
+      height: 100%;
     }
     .el-main {
-        padding: 0 0 0 10px;
+      padding: 0 0 0 10px;
     }
 
     .el-table::before {
-        z-index: inherit;
+      z-index: inherit;
     }
     td {
-        border:none !important;
+      border: none !important;
     }
-    td:hover{ background: #FFFFFF !important; }
-
-</style>
+    td:hover {
+      background: #ffffff !important;
+    }
+  </style>
 </html>
