--- a/web/index.html
+++ b/web/index.html
@@ -1,90 +1,99 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Chat Demo</title>
 
-    <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-chalk/index.css">
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/element-ui/lib/theme-chalk/index.css"
+    />
     <script src="/static/js/vue.js"></script>
     <script src="/static/js/element.js"></script>
     <script src="/static/js/js.cookie.js"></script>
-</head>
+  </head>
 
-<body>
-<div id="app">
-    <div class="form">
+  <body>
+    <div id="app">
+      <div class="form">
         <div class="title">
-            <h1>Chat Demo</h1>
+          <h1>Chat Demo</h1>
         </div>
         <el-row :gutter="20" class="form">
-            <el-col :span="8" :offset="8">
-                <el-form ref="form" label-width="80px">
-                    <el-form-item label="Username">
-                        <el-input v-model="name"></el-input>
-                    </el-form-item>
-                    <el-form-item label="Mode">
-                        <el-radio-group v-model="target" style="width: 100%;">
-                            <el-radio-button label="WebSocket"></el-radio-button>
-                            <el-radio-button label="Long Polling"></el-radio-button>
-                            <el-radio-button label="Refresh"></el-radio-button>
-                        </el-radio-group>
-                    </el-form-item>
-                    <el-form-item>
-                        <el-button type="primary" @click="onSubmit">Try out</el-button>
-                    </el-form-item>
-                </el-form>
-            </el-col>
+          <el-col :span="8" :offset="8">
+            <el-form ref="form" label-width="80px">
+              <el-form-item label="Username">
+                <el-input v-model="name"></el-input>
+              </el-form-item>
+              <el-form-item label="Mode">
+                <el-radio-group v-model="target" style="width: 100%;">
+                  <el-radio-button label="WebSocket"></el-radio-button>
+                  <el-radio-button label="Long Polling"></el-radio-button>
+                  <el-radio-button label="Refresh"></el-radio-button>
+                </el-radio-group>
+              </el-form-item>
+              <el-form-item>
+                <el-button type="primary" @click="onSubmit">Try out</el-button>
+              </el-form-item>
+            </el-form>
+          </el-col>
         </el-row>
+      </div>
     </div>
-</div>
-</body>
-<script>
+  </body>
+  <script>
     const routes = {
-        'Refresh': '/refresh',
-        'Long Polling': '/polling',
-        'WebSocket': '/ws'
-    }
+      Refresh: "/refresh",
+      "Long Polling": "/polling",
+      WebSocket: "/ws"
+    };
     const app = new Vue({
-        name: 'app',
-        el: '#app',
-        data() {
-            return {
-                name: 'vouv',
-                target: 'WebSocket'
-            }
-        },
-        methods: {
-            onSubmit() {
-                Cookies.set('username', this.name);
-                window.location.href = routes[this.target]
-            }
+      name: "app",
+      el: "#app",
+      data() {
+        return {
+          name: "vouv",
+          target: "WebSocket"
+        };
+      },
+      methods: {
+        onSubmit() {
+          Cookies.set("username", this.name);
+          window.location.href = routes[this.target];
         }
-    })
-</script>
-<style>
-    *{margin: 0;padding: 0}
-    html,body,#app{height: 100%}
+      }
+    });
+  </script>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+    }
+    html,
+    body,
+    #app {
+      height: 100%;
+    }
     body {
-        background-color: #283443;
+      background-color: #283443;
     }
     #app {
-        width: 100%;
-        height: 100%;
-        overflow: hidden;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
     }
     .title h1 {
-        font-size: 26px;
-        color: #eee;
-        margin-top: 10%;
-        margin-bottom: 30px;
-        text-align: center;
-        font-weight: bold;
+      font-size: 26px;
+      color: #eee;
+      margin-top: 10%;
+      margin-bottom: 30px;
+      text-align: center;
+      font-weight: bold;
     }
     .form button {
-        width: 100%;
-        color: white;
+      width: 100%;
+      color: white;
     }
-</style>
+  </style>
 </html>
-
